# MouseBehaviour

./: CMakeLists.txt  main.cpp
MouseReader/: README.md  read_mouse_delta.py
analysis/: analyze_trial_video.py
